<resources>
    <string name="app_name">Covid Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_news_welcome">These are all news</string>
    <string name="news_welcome">These are news:</string>
    <string name="papers_welcome">These are papers:</string>
    <string name="tab_label_all">All</string>
    <string name="tab_label_news">News</string>
    <string name="tab_label_paper">Paper</string>
    <string name="title_events">Events</string>
    <string name="title_data">Data</string>
    <string name="title_ralations">Relations</string>
    <string name="title_activity_search_entity">SearchEntityActivity</string>
    <string name="tip_drag">Click to add/remove. Drag to sort.</string>
    <string name="my_cahnnel">My categories</string>
    <string name="other_channel">Other categories</string>
    <string name="edit">Edit</string>
    <string name="finish">Finish</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="image">图片</string>
    <string name="property">属性：</string>
    <string name="relation">相关实体：</string>
    <string name="cluster">Cluster</string>
    <string name="scholar">Scholar</string>
    <string name="tab_label_citation">citation</string>
    <string name="tab_label_passedaway">passedaway</string>
    <string name="biology">Biology</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="share">share</string>
</resources>