<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_events"/>

    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/ic_baseline_data_usage_24"
        android:title="@string/title_data"/>

    <item
        android:id="@+id/nav_relation"
        android:icon="@drawable/ic_baseline_arrow_forward_24"
        android:title="@string/title_ralations"/>

    <item
        android:id="@+id/nav_cluster"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/cluster"/>
    <item
        android:id="@+id/nav_scholar"
        android:icon="@drawable/ic_baseline_school_24"
        android:title="@string/scholar"/>
</menu>